# ProgAv

./: CMakeLists.txt  Makefile  README.md  base_conversion.c  horizontal_line_filter  main.c
Blackjack_sockets/: a.out  client  client.c  server  server.c  sockets.c  sockets.h  sockets.h.gch
Image_filters_man_threads/: ppms.c  ppms.h  test_ppm.c
Image_filters_omp/: ppms.c  ppms.h
Image_manipulation/: makefile  ppm.c  ppm.h  ppm_main.c  prueba.ppm  tester-a.ppm  tester.ppm
Matrix/: MatrixAxB  Number_guess.c  matrix_mult.c
Rail_Fence/: a.out  decoded_encoded_rail_fence  decoded_rail_fence  encoded_rail_fence  prueba  rail_fence  rail_fence.c  rail_fence.h  rail_fence.h.gch  rail_fence_main.c
Simple_Bank/: accounts.txt  bank_client  bank_client.c  bank_server  bank_server.c
Socket_Signals/: Makefile  fatal_error.c  fatal_error.h  get_pi.c  get_pi.h  pi_client  pi_client.c  pi_server  pi_server.c  sockets.c  sockets.h  test_pi  test_pi.c
